--- a/subcategories/business-small-biz.html
+++ b/subcategories/business-small-biz.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head> 
-<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="shortcut icon" href="/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-<link rel="manifest" href="/site.webmanifest" />
+<link rel="icon" type="image/png" href="https://calcdomain.com/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="https://calcdomain.com/favicon.svg" />
+<link rel="shortcut icon" href="https://calcdomain.com/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="https://calcdomain.com/apple-touch-icon.png" />
+<link rel="manifest" href="https://calcdomain.com/site.webmanifest" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Business & Small Biz Calculators - Professional Tools for Business & Small Biz</title>
@@ -19,7 +19,7 @@
         .card-hover:hover { transform: translateY(-5px); box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05); }
     </style>
     <!-- Ezoic, Google AdSense, GSC, and GA scripts would go here -->
-<script src="search.js" defer></script>
+<script src="https://calcdomain.com/search.js" defer></script>
 <!-- MathJax for LaTeX formulas -->
 <script>
   window.MathJax = {
@@ -31,8 +31,8 @@
   };
 </script>
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
-<link rel="preload" href="/assets/js/mobile-menu.js" as="script">
-<link rel="preload" href="/assets/js/page-enhancements.js" as="script">
+<link rel="preload" href="https://calcdomain.com/assets/js/mobile-menu.js" as="script">
+<link rel="preload" href="https://calcdomain.com/assets/js/page-enhancements.js" as="script">
 
 </head>
 <body class="bg-gray-50 text-gray-800">
@@ -40,7 +40,7 @@
     <!-- Header -->
     <header class="bg-white shadow-sm sticky top-0 z-50">
         <nav class="container mx-auto px-4 lg:px-6 py-4 flex justify-between items-center">
-            <a href="../index.html" class="text-2xl font-bold text-blue-600">CalcDomain</a>
+            <a href="https://calcdomain.com/index.html" class="text-2xl font-bold text-blue-600">CalcDomain</a>
             <div class="w-full max-w-md hidden md:block">
                 <div class="relative">
                     <input type="search" placeholder="Search for a calculator..." class="w-full py-2 px-4 border border-gray-300 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-500">
@@ -59,8 +59,8 @@
             <main class="w-full lg:w-2/3">
                 <!-- Breadcrumbs -->
                 <nav class="text-sm mb-4 text-gray-600">
-                    <a href="../index.html" class="hover:text-blue-600">Home</a> &raquo;
-                    <a href="../finance.html" class="hover:text-blue-600">Finance Calculators</a> &raquo;
+                    <a href="https://calcdomain.com/index.html" class="hover:text-blue-600">Home</a> &raquo;
+                    <a href="https://calcdomain.com/finance.html" class="hover:text-blue-600">Finance Calculators</a> &raquo;
                     <span>Business & Small Biz</span>
                 </nav>
 
@@ -73,7 +73,7 @@
                 <!-- Calculators Grid -->
                 <section>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                            <a href="break-even-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            <a href="https://calcdomain.com/break-even-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -81,7 +81,7 @@
                                     <h3 class="font-semibold text-gray-800">Break-even Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate break-even calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="profit-margin-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/profit-margin-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -89,7 +89,7 @@
                                     <h3 class="font-semibold text-gray-800">Profit Margin Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate profit margin calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="markup-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/markup-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -97,7 +97,7 @@
                                     <h3 class="font-semibold text-gray-800">Markup Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate markup calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="cash-flow-projection-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/cash-flow-projection-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -105,7 +105,7 @@
                                     <h3 class="font-semibold text-gray-800">Cash Flow Projection Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate cash flow projection calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="business-loan-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/business-loan-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -113,7 +113,7 @@
                                     <h3 class="font-semibold text-gray-800">Business Loan Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate business loan calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="equipment-financing-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/equipment-financing-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -121,7 +121,7 @@
                                     <h3 class="font-semibold text-gray-800">Equipment Financing Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate equipment financing calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="invoice-factoring-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/invoice-factoring-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -129,7 +129,7 @@
                                     <h3 class="font-semibold text-gray-800">Invoice Factoring Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate invoice factoring calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="business-valuation-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/business-valuation-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -137,7 +137,7 @@
                                     <h3 class="font-semibold text-gray-800">Business Valuation Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate business valuation calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="sba-loan-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/sba-loan-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -162,10 +162,10 @@
                     <div class="bg-white p-6 rounded-lg shadow-md">
                         <h3 class="font-bold text-lg mb-4">Related Categories</h3>
                         <ul class="space-y-3">
-                            <li><a href="../finance.html" class="text-blue-600 hover:underline">Finance Calculators</a></li>
-                            <li><a href="../health-fitness.html" class="text-blue-600 hover:underline">Health & Fitness</a></li>
-                            <li><a href="../math-conversions.html" class="text-blue-600 hover:underline">Math & Conversions</a></li>
-                            <li><a href="../lifestyle-everyday.html" class="text-blue-600 hover:underline">Lifestyle & Everyday</a></li>
+                            <li><a href="https://calcdomain.com/finance.html" class="text-blue-600 hover:underline">Finance Calculators</a></li>
+                            <li><a href="https://calcdomain.com/health-fitness.html" class="text-blue-600 hover:underline">Health & Fitness</a></li>
+                            <li><a href="https://calcdomain.com/math-conversions.html" class="text-blue-600 hover:underline">Math & Conversions</a></li>
+                            <li><a href="https://calcdomain.com/lifestyle-everyday.html" class="text-blue-600 hover:underline">Lifestyle & Everyday</a></li>
                         </ul>
                     </div>
                 </div>
