--- a/engineering-mechanical.html
+++ b/engineering-mechanical.html
@@ -1,262 +1,16 @@
 <!DOCTYPE html>
-<html lang="en"><head> 
-<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="shortcut icon" href="/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-<link rel="manifest" href="/site.webmanifest" />
-<!-- Required meta -->
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Mechanical Engineering Calculators | CalcDomain</title>
-<meta content="Practical mechanical engineering calculators for machine design, fluids &amp; thermodynamics, HVAC, manufacturing, and dynamics. Clear inputs, instant results." name="description"/>
-<meta content="CalcDomain" name="author"/>
-<!-- Canonical -->
-<link href="https://calcdomain.com/engineering-mechanical.html" rel="canonical"/>
-<!-- Favicons -->
-<link href="/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png"/>
-<link href="/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png"/>
-<link href="/favicon-48x48.png" rel="icon" sizes="48x48" type="image/png"/>
-<link href="/favicon-64x64.png" rel="icon" sizes="64x64" type="image/png"/>
-<link href="/favicon.ico" rel="icon" type="image/x-icon"/>
-<link href="/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180"/>
-<link href="/icon-512x512.png" rel="icon" sizes="512x512" type="image/png"/>
-<link href="/manifest.json" rel="manifest"/>
-<meta content="#333333" name="theme-color"/>
-<!-- Fonts & CSS -->
-<link href="https://fonts.googleapis.com" rel="preconnect"/>
-<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&amp;family=Source+Code+Pro:wght@400;600&amp;display=swap" rel="stylesheet"/>
-<script src="https://cdn.tailwindcss.com"></script>
-<script src="search.js" defer></script>
-<!-- MathJax for LaTeX formulas -->
-<script>
-  window.MathJax = {
-    tex: {
-      inlineMath: [['\(','\)'], ['$', '$']],
-      displayMath: [['$','$'], ['\[','\]']]
-    },
-    svg: { fontCache: 'global' }
-  };
-</script>
-<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
-<link rel="preload" href="/assets/js/mobile-menu.js" as="script">
-<link rel="preload" href="/assets/js/page-enhancements.js" as="script">
-
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="refresh" content="0; url=/subcategories/mechanical-engineering.html">
+  <title>Mechanical Engineering Calculators | CalcDomain</title>
+  <link rel="canonical" href="https://calcdomain.com/subcategories/mechanical-engineering.html">
+  <meta name="robots" content="noindex, follow">
+  <script>
+    window.location.replace("/subcategories/mechanical-engineering.html");
+  </script>
 </head>
 <body>
-<a class="skip-link" href="#main-content">Skip to main content</a>
-<!-- Header (no internal search) -->
-
-<main class="main-content" id="main-content">
-<div class="container">
-<!-- Breadcrumb -->
-<nav style="margin-bottom:1rem;font-size:.9rem;color:var(--muted-text-color);">
-<a href="/">Home</a> / <a href="https://calcdomain.com/engineering.html">Engineering</a> / Mechanical
-      </nav>
-<h1>Mechanical Engineering Calculators</h1>
-<p style="max-width: 820px;">
-        A focused toolkit for mechanical engineers and designers. From machine design and
-        strength of materials to fluids, thermodynamics, HVAC, and manufacturing, these calculators
-        deliver clear inputs, standards-aware formulas, and instant results to speed up your work.
-      </p>
-<!-- Machine Design & Kinematics -->
-<h2 style="margin-top:2rem;">Machine Design &amp; Kinematics</h2>
-<div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/gear-ratio.html">
-<h3>Gear Ratio Calculator</h3>
-<p>Compute ratio, speed, and torque relationships for gear pairs and trains.</p>
-</a>
-<a class="card" href="https://calcdomain.com/torque.html">
-<h3>Torque Calculator</h3>
-<p>Relate torque, force, and radius with quick unit-aware results.</p>
-</a>
-<a class="card" href="https://calcdomain.com/horsepower.html">
-<h3>Horsepower Calculator</h3>
-<p>Convert between power, torque, and RPM instantly.</p>
-</a>
-<a class="card" href="https://calcdomain.com/pulley-speed.html">
-<h3>Pulley Speed Calculator</h3>
-<p>Find driven speed and ratio for belt and pulley systems.</p>
-</a>
-<a class="card" href="https://calcdomain.com/spring-rate.html">
-<h3>Spring Rate Calculator</h3>
-<p>Estimate stiffness, deflection, and preload for common spring types.</p>
-</a>
-<a class="card" href="https://calcdomain.com/belt-drive-design.html">
-<h3>Belt Drive Design Calculator</h3>
-<p>Select belt length, wrap angle, and center distance with ease.</p>
-</a>
-<a class="card" href="https://calcdomain.com/chain-drive-design.html">
-<h3>Chain Drive Design Calculator</h3>
-<p>Size sprockets, pitch, and chain length for reliable transmission.</p>
-</a>
-<a class="card" href="https://calcdomain.com/cam-design.html">
-<h3>Cam Profile Design Calculator</h3>
-<p>Generate motion laws and key cam parameters for follower travel.</p>
-</a>
-<a class="card" href="https://calcdomain.com/bolt-torque.html">
-<h3>Bolt Torque Calculator</h3>
-<p>Determine tightening torque from preload, size, and friction assumptions.</p>
-</a>
-<a class="card" href="https://calcdomain.com/journal-bearing-design.html">
-<h3>Journal Bearing Design Calculator</h3>
-<p>Evaluate load capacity, clearance, and Sommerfeld number.</p>
-</a>
-<a class="card" href="https://calcdomain.com/shaft-design.html">
-<h3>Shaft Design Calculator</h3>
-<p>Check stresses and deflection for stepped or keyed shafts.</p>
-</a>
-<a class="card" href="https://calcdomain.com/bearing-life.html">
-<h3>Ball Bearing Life Calculator</h3>
-<p>Estimate L10 bearing life from load and speed conditions.</p>
-</a>
-<a class="card" href="https://calcdomain.com/pressure-vessel-design.html">
-<h3>Pressure Vessel Design (ASME)</h3>
-<p>Quick wall thickness and hoop stress checks for cylinders and heads.</p>
-</a>
-<a class="card" href="https://calcdomain.com/fin-heat-transfer.html">
-<h3>Fin Heat Transfer Calculator</h3>
-<p>Compute fin efficiency and heat dissipation for common fin types.</p>
-</a>
-</div>
-<!-- Mechanics of Materials -->
-<h2 style="margin-top:2rem;">Mechanics of Materials</h2>
-<div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/stress-and-strain.html">
-<h3>Stress and Strain Calculator</h3>
-<p>Convert between stress, strain, and modulus, including axial and shear.</p>
-</a>
-<a class="card" href="https://calcdomain.com/factor-of-safety.html">
-<h3>Factor of Safety Calculator</h3>
-<p>Check static safety using yield/ultimate criteria and applied loads.</p>
-</a>
-<a class="card" href="https://calcdomain.com/beam-deflection.html">
-<h3>Beam Deflection Calculator</h3>
-<p>Predict deflection and slope for standard loads and supports.</p>
-</a>
-<a class="card" href="https://calcdomain.com/thermal-stress.html">
-<h3>Thermal Stress Calculator</h3>
-<p>Estimate stresses from constrained thermal expansion.</p>
-</a>
-<a class="card" href="https://calcdomain.com/fatigue-life-calculator-sn-curve.html">
-<h3>Fatigue Life (S–N) Calculator</h3>
-<p>Approximate cycles to failure from stress amplitude and materials data.</p>
-</a>
-<a class="card" href="https://calcdomain.com/stress-intensity-factor.html">
-<h3>Fracture Mechanics (K) Calculator</h3>
-<p>Evaluate stress intensity factor and crack growth parameters.</p>
-</a>
-<a class="card" href="https://calcdomain.com/hardness-conversion.html">
-<h3>Hardness Conversion Calculator</h3>
-<p>Convert between Rockwell, Brinell, and Vickers scales.</p>
-</a>
-<a class="card" href="https://calcdomain.com/welded-connection.html">
-<h3>Welded Connection Design</h3>
-<p>Check fillet and groove weld capacities under combined loading.</p>
-</a>
-</div>
-<!-- Fluids & Thermodynamics -->
-<h2 style="margin-top:2rem;">Fluids &amp; Thermodynamics</h2>
-<div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/reynolds-number.html">
-<h3>Reynolds Number Calculator</h3>
-<p>Classify flow regime and assess similarity scaling.</p>
-</a>
-<a class="card" href="https://calcdomain.com/bernoulli-equation.html">
-<h3>Bernoulli's Equation Calculator</h3>
-<p>Relate pressure, velocity, and elevation for steady incompressible flow.</p>
-</a>
-<a class="card" href="https://calcdomain.com/heat-transfer.html">
-<h3>Heat Transfer Calculator</h3>
-<p>Conduction, convection, and radiation estimates in one place.</p>
-</a>
-<a class="card" href="https://calcdomain.com/rankine-cycle.html">
-<h3>Rankine Cycle Calculator</h3>
-<p>Approximate thermal efficiency and state points for steam cycles.</p>
-</a>
-<a class="card" href="https://calcdomain.com/lmtd.html">
-<h3>Heat Exchanger (LMTD) Calculator</h3>
-<p>Size exchangers using LMTD/UA methods for common configurations.</p>
-</a>
-<a class="card" href="https://calcdomain.com/hazen-williams.html">
-<h3>Pipe Flow (Hazen–Williams)</h3>
-<p>Estimate head loss in water systems using empirical C factors.</p>
-</a>
-<a class="card" href="https://calcdomain.com/darcy-weisbach.html">
-<h3>Pipe Flow (Darcy–Weisbach)</h3>
-<p>Compute friction losses via Moody/Colebrook for any fluid.</p>
-</a>
-<a class="card" href="https://calcdomain.com/orifice-plate.html">
-<h3>Orifice Plate Flow Calculator</h3>
-<p>Measure flow rate from differential pressure across an orifice.</p>
-</a>
-<a class="card" href="https://calcdomain.com/pump-power.html">
-<h3>Pump Power Calculator</h3>
-<p>Find hydraulic and shaft power from flow, head, and efficiency.</p>
-</a>
-<a class="card" href="https://calcdomain.com/hydrostatic-pressure.html">
-<h3>Hydrostatic Pressure Calculator</h3>
-<p>Determine pressure with depth for liquids at rest.</p>
-</a>
-<a class="card" href="https://calcdomain.com/pump-sizing.html">
-<h3>Pump Sizing Calculator</h3>
-<p>Select pump capacity from system curve and duty point.</p>
-</a>
-<a class="card" href="https://calcdomain.com/pipe-sizing.html">
-<h3>Pipe Sizing (Water) Calculator</h3>
-<p>Choose pipe diameter to meet velocity and head-loss targets.</p>
-</a>
-</div>
-<!-- HVAC & Thermal Systems -->
-<h2 style="margin-top:2rem;">HVAC &amp; Thermal Systems</h2>
-<div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/hvac-tonnage.html">
-<h3>HVAC Tonnage Calculator</h3>
-<p>Estimate cooling capacity requirements for spaces.</p>
-</a>
-<a class="card" href="https://calcdomain.com/duct-sizing.html">
-<h3>Duct Sizing (Equal Friction)</h3>
-<p>Size ducts by target friction rate and airflow.</p>
-</a>
-<a class="card" href="https://calcdomain.com/psychrometric-chart.html">
-<h3>Psychrometric Calculator</h3>
-<p>Get humidity ratio, enthalpy, and state points from T/φ.</p>
-</a>
-<a class="card" href="https://calcdomain.com/heat-loss.html">
-<h3>Heat Loss Calculator</h3>
-<p>Estimate envelope and infiltration heat losses.</p>
-</a>
-<a class="card" href="https://calcdomain.com/chiller-load.html">
-<h3>Chiller Load Calculator</h3>
-<p>Compute cooling load from flow rate and ΔT.</p>
-</a>
-</div>
-<!-- Manufacturing -->
-<h2 style="margin-top:2rem;">Manufacturing</h2>
-<div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/speeds-and-feeds.html">
-<h3>Machining Speed &amp; Feed</h3>
-<p>Find RPM, feed, and MRR for milling, turning, and drilling.</p>
-</a>
-<a class="card" href="https://calcdomain.com/welding-cost.html">
-<h3>Welding Cost Calculator</h3>
-<p>Estimate weld time, consumables, and total cost per joint.</p>
-</a>
-</div>
-<!-- Dynamics & Vibrations -->
-<h2 style="margin-top:2rem;">Dynamics &amp; Vibrations</h2>
-<div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/natural-frequency.html">
-<h3>Vibration Analysis (Natural Frequency)</h3>
-<p>Approximate fn for SDOF and simple multi-DOF systems.</p>
-</a>
-</div>
-</div>
-</main>
-<!-- Footer -->
-
-<!-- Scripts: Nav toggle -->
-
-
-</body></html>
+  <p>Redirecting to <a href="/subcategories/mechanical-engineering.html">Mechanical Engineering Calculators</a>...</p>
+</body>
+</html>
