--- a/house-affordability.html
+++ b/house-affordability.html
@@ -549,9 +549,9 @@
                         <ul class="space-y-3">
                             <li><a href="mortgage-payment.html" class="text-blue-600 hover:underline">Mortgage Payment Calculator</a></li>
                             <li><a href="rent-vs-buy.html" class="text-blue-600 hover:underline">Rent vs Buy Calculator</a></li>
-                            <li><a href="down-payment-calculator.html" class="text-blue-600 hover:underline">Down Payment Calculator</a></li>
+                            <li><a href="down-payment.html" class="text-blue-600 hover:underline">Down Payment Calculator</a></li>
                             <li><a href="debt-to-income-ratio.html" class="text-blue-600 hover:underline">Debt-to-Income Ratio Calculator</a></li>
-                            <li><a href="closing-costs-calculator.html" class="text-blue-600 hover:underline">Closing Costs Calculator</a></li>
+                            <li><a href="closing-costs.html" class="text-blue-600 hover:underline">Closing Costs Calculator</a></li>
                         </ul>
                     </div>
                 </div>
