--- a/bmi-calculator.html
+++ b/bmi-calculator.html
@@ -103,7 +103,7 @@
           <a href="health-fitness.html" class="text-gray-700 hover:text-blue-600 transition-colors">Categories</a>
         </div>
 
-        <!-- Mobile toggle -->
+        <!-- Mobile toggle -->health-fitness.html
         <button id="mobile-menu-toggle" class="md:hidden p-2" aria-label="Toggle menu">
           <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -136,9 +136,9 @@
   <main id="main" class="container mx-auto px-4 lg:px-6 py-8">
     <!-- Breadcrumb -->
     <nav aria-label="Breadcrumb" class="text-sm text-gray-500 mb-4">
-      <a href="index.html" class="hover:text-blue-600">Home</a> /
-      <a href="health-fitness.html" class="hover:text-blue-600">Health & Fitness</a> /
-      <a href="health-fitness-health-metrics.html" class="hover:text-blue-600">Health Metrics</a> /
+      <a href="https://calcdomain.com/index.html" class="hover:text-blue-600">Home</a> /
+      <a href="https://calcdomain.com/health-fitness.html" class="hover:text-blue-600">Health & Fitness</a> /
+      <a href="https://calcdomain.com/subcategories/health-metrics.html" class="hover:text-blue-600">Health Metrics</a> /
       <span class="text-gray-700">BMI Calculator</span>
     </nav>
 
